# quickcalc

./: Cargo.toml  README.md  deps
calculator/: Cargo.toml
calculator/src/: lib.rs
src/: main.rs
