[package]
name = "quickcalc"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calculator = { path = "./calculator" }
iced = "0.2.0"
iced_native = "0.3.0"
