[package]
name = "calculator"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_native = "0.3.0"
lazy_static = "1.4.0"
rust_decimal = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
ureq = "2.0.0"
